# calculator-api

./: .vercelignore  Cargo.toml  README.md  vercel.json
.github/workflows/: rust.yml
api/: adder.rs  divider.rs  multiplier.rs  subtractor.rs
src/: api.rs  lib.rs  main.rs
src/api/: adder.rs  divider.rs  multiplier.rs  subtracter.rs
