[package]
name = "calculator-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
serde =  "1.0.189"
serde_json = {version = "1.0.107", features = ["raw_value"]}
tokio = {version = "1.33.0", features = ["macros"]}
url = "2.4.1"
vercel_runtime = "1.1.0"

[[bin]]
name = "adder"
path = "api/adder.rs"

[[bin]]
name = "subtracter"
path = "api/subtracter.rs"

[[bin]]
name = "multiplier"
path = "api/multiplier.rs"

[[bin]]
name = "divider"
path = "api/divider.rs"
